--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,18 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "components/*": ["./src/components/*"],
-            "icons/*": ["./src/icons/*"],
-            "stores/*": ["./src/stores/*"]
+            "components/*": [
+                "./src/components/*"
+            ],
+            "hooks/*": [
+                "./src/hooks/*"
+            ],
+            "icons/*": [
+                "./src/icons/*"
+            ],
+            "stores/*": [
+                "./src/stores/*"
+            ]
         }
     }
 }
